infra/k8s/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger-deployment
  labels:
    app: jaeger
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jaeger # name of pod to match
      api: jaeger
  template:
    metadata:
      labels:
        app: jaeger
        api: jaeger
    spec:
      containers:
        - name: jaeger
          resources: 
            requests:
              memory: "64Mi"  # 64 MiB
              cpu: "250m" # 1/4 of cpu
            limits:
              memory: "128Mi"  # 128 MiB
              cpu: "500m"  # half of cpu
          image: jaegertracing/all-in-one:1.57
          ports:
            - containerPort: 5775
              protocol: UDP
            - containerPort: 6831
              protocol: UDP
            - containerPort: 6832
              protocol: UDP
            - containerPort: 5778
              protocol: TCP
            - containerPort: 16686
              protocol: TCP
            - containerPort: 14268
              protocol: TCP
            - containerPort: 9411
              protocol: TCP
            - containerPort: 4317
              protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: jaeger-service
  labels:
    tier: backend
    app: jaeger-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 4317
      targetPort: 4317
      # nodePort: 30085
      name: grpc-port
    - protocol: TCP
      port: 16686
      targetPort: 16686
      # nodePort: 30086
      name: http-query-port
  selector:
    api: jaeger
    app: jaeger
