infra/k8s/user_management-msvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  labels:
    app: user-msvc
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-msvc # name of pod to match
      api: user-msvc
  template:
    metadata:
      labels:
        app: user-msvc
        api: user-msvc
    spec:
      containers:
        - name: fleet-msvc
          image: ghcr.io/lefosg/quarkus-rest-car-rental-service/user:microservices
          # resources: 
          #   requests:
          #     memory: "64Mi"  # 64 MiB
          #     cpu: "250m" # 1/4 of cpu
          #   limits:
          #     memory: "128Mi"  # 128 MiB
          #     cpu: "500m"  # half of cpu
          ports:
            - containerPort: 8082
              name: http
              protocol: TCP
      
---

apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    tier: backend
    app: user-service
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      #nodePort: 30082
  selector:
    app: user-msvc
    api: user-msvc
